--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "homepage": "https://carlinliao.github.io/meta-github-renderer/"
+    "eject": "react-scripts eject"
+    // "predeploy": "npm run build",
+    // "deploy": "gh-pages -d build"
+  }
+  // "homepage": "https://carlinliao.github.io/meta-github-renderer/"
 }
